--- a/modal2/modal2.css
+++ b/modal2/modal2.css
@@ -32,8 +32,8 @@
 
 body {
     width: 100%;
-    height: 850px;
-    position: absolute;
+    height: 500px;
+    position: relative;
     top: 0;
     left: 0;
     overflow: auto;
